--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=BookStoreProject
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/book
+spring.datasource.url=jdbc:mysql://localhost:3306/book_store
 spring.datasource.username=root
 spring.datasource.password=musaecer
 
